@startuml

package "org-camal-inventory" {

    interface IInventoryService {
        - listarProductos()
        - crearProducto()
        - actualizarProducto()
        - eliminarProducto()
        - actualizarStock()
        - generarReporteInventario()
    }

    class ProductoTipos {
        - idProductoTipo
        - codigo
        - nombre
    }

    class Unidades {
        - idUnidad
        - codigo
        - nombre
    }

    class Almacen {
        - idAlmacen
        - idEmpresa
        - idAlmacenPadre
        - nombre
        - estado
    }

    class AlmacenTipos {
        - idAlmacenTipo
        - codigo
        - descripcion
    }


    class Movimientos {
        - idMovimiento
        - idEmpresa
        - numero
        - total
        - idEstado
        - idUsuario
        - idMonedaCodigo
        - fechaEmision
        - idAlmacen
        - tipoDocumentoReferencia
        - serieDocumentoReferencia
        - numeroDocReferencia
        - codigoMotivo
        - observaciones
        - cantidadEnvases
        - fechaMovimiento
    }

    class MovimientoMotivos {
        - idMotivo
        - nombre
        - descripcion
    }

    class DetalleMovimiento {
        - idDetalleMovimiento
        - idMovimiento
        - idProducto
        - cantidadEnvases
        - peso
        - precioUnitario
        - total
        - unidadesCodigo
    }

    class Productos {
        - idProducto
        - codigo
        - idTipo
        - nombre
        - generarStock
        - estado
        - idUnidad
        - precioSugerido
    }
    class StockAlmacen {
        - idAlmacen
        - idEnvase
        - idProducto
        - cantidad
    }

    class ProductoEstados {
        - idProductoEstado
        - codigo
        - descripcion
    }
    interface IMovimientosService {
        - listarMovimientosPorIdEmpresa()
        - actualizarMovimiento(movimiento)
        - eliminarmovimiento(id)
        - registrarMovimiento(movimiento)
        - generarReporteInventario(idAlmacen)
    }
    class Envase {
        - idEnvase
        - idEmpresa
        - tipoEnvase
        - descripcion
        - capacidad
        - pesoReferencia
        - estado
    }

    Productos --> IInventoryService : implementa
    StockAlmacen "1" *-- "1" Productos : relacionado
    StockAlmacen "1" *-- "1" Envase : relacionado
    StockAlmacen "1" *-- "1" Almacen : relacionado
    Productos "1" *-- "1" Unidades : utiliza
    Productos "1" *-- "n" ProductoTipos : contiene
    Productos "1" *-- "1" ProductoEstados : tiene estado

    Almacen "1" *-- "1" AlmacenTipos : composicion
    Almacen "n" --* "1" Productos : contiene

    Movimientos --> IMovimientosService : implementa
    Movimientos "1" *-- "n" DetalleMovimiento : detalle
    MovimientoMotivos "1" --* "n" Movimientos : motivos

    DetalleMovimiento "1" *-- "1" Unidades : composicion
    DetalleMovimiento "1" *-- "1" Productos : relacionado
}

@enduml